objects/Appointments__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>AppointmentsContact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>EndTime__c</fullName>
        <defaultValue>now()+7.1</defaultValue>
        <label>EndTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><fields>
        <fullName>StartTime__c</fullName>
        <defaultValue>NOW() + 7</defaultValue>
        <label>StartTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Appointment</label><nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Appointments Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Appointments</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>